2001-11-15  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/util/DBProperties.java:
	Add addQueryFile method so additional query files can be added.

2001-11-14  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/society/DBInitializerServiceProvider.java:
	Insure that the driver class is loaded for all queries not just
	those using the main connection.

2001-11-13  Michael Thome  <mthome@bbn.com>

	* SecurityComponent, StandardSecurityComponent, Node
	Abstraction of Security Management tool from NAI&Boeing, in
	Component form.  Privileged Node-level component, loaded before
	any external components are considered. StandardSecurityComponent
	implements NAI/Boeing code as before, but requires
	-Dorg.cougaar.core.security.Component=org.cougaar.core.society.StandardSecurityComponent
	in order to activate it.  Better would be to move it to the
	security jar.  Node updated to load the SecurityComponent if
	requested.

2001-11-13  Beth DePass  <bdepass@bbn.com>

	* TrafficMaskingGeneratorAspect, TrafficMaskingStatistics
	Implement the TrafficMaskingGeneratorService API.  Also generate
	TrafficMaskingStatistics for each node. Cleanup Aspect to try to
	share a Timer instance for multiple TimerTasks. Ensure that the
	reply timertask is started whether we start from system params or
	turn on request from the controller.

	* TrafficMaskingGeneratorServiceProvider
	New provider to provide TrafficMaskingGeneratorService.  This
	service is hooked into the MT ServiceBroker so that other MT
	Aspects (children) can access it.

	* StandardAspect
	Provide getBindingSite() for Aspects since StandardAspect has a
	final setBindingSite().
	
2001-11-12  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/society/DBInitializerServiceProvider.java:
	Throw exception if translateAttributeValue finds no translate
	(query returns no row).

2001-11-12  Beth DePass <bdepass@bbn.com>

	* TrafficMaskingAspect, TrafficMaskingGeneratorAspect