@@ -1,42 +1,0 @@
-/*
- * <copyright>
- *  Copyright 2001 BBNT Solutions, LLC
- *  under sponsorship of the Defense Advanced Research Projects Agency (DARPA).
- * 
- *  This program is free software; you can redistribute it and/or modify
- *  it under the terms of the Cougaar Open Source License as published by
- *  DARPA on the Cougaar Open Source Website (www.cougaar.org).
- * 
- *  THE COUGAAR SOFTWARE AND ANY DERIVATIVE SUPPLIED BY LICENSOR IS
- *  PROVIDED 'AS IS' WITHOUT WARRANTIES OF ANY KIND, WHETHER EXPRESS OR
- *  IMPLIED, INCLUDING (BUT NOT LIMITED TO) ALL IMPLIED WARRANTIES OF
- *  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, AND WITHOUT
- *  ANY WARRANTIES AS TO NON-INFRINGEMENT.  IN NO EVENT SHALL COPYRIGHT
- *  HOLDER BE LIABLE FOR ANY DIRECT, SPECIAL, INDIRECT OR CONSEQUENTIAL
- *  DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE OF DATA OR PROFITS,
- *  TORTIOUS CONDUCT, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
- *  PERFORMANCE OF THE COUGAAR SOFTWARE.
- * </copyright>
- */
-package org.cougaar.core.cluster;
-
-import org.cougaar.core.component.Service;
-import org.cougaar.core.plugin.ScheduleablePlugIn;
-import java.util.*;
-
-/** A SharedThreadingService is an API which may be supplied by a 
- * ServiceProvider registered in a ServiceBroker object that provides shared
- * thread scheduling. This is used for SharedThreading Plugins, but 
- * could be extended in the future.
- **/
-public interface SharedThreadingService extends Service {
- 
-  /** called by the plugin (sharedthreading class right now) to register
-   * the plugin with the scheduler
-   **/
-  void registerPlugIn(ScheduleablePlugIn plugin);
-  
-}
-
-
-
